# tensorflow

./: WORKSPACE
python_test/: cifar_xla.py  dist_lenet_xla.py  dist_run.sh  dist_test.py  lenet_xla.py  resnet_xla.py  test.py
tensorflow/compiler/jit/: BUILD
tensorflow/compiler/jit/kernels/: xla_ops.cc
tensorflow/compiler/plugin/: BUILD
tensorflow/compiler/plugin/vsi/driver/: 0001-patch-for-TF-XLA.patch  BUILD  vsi_compiler.cc  vsi_compiler.h  vsi_executable.cc  vsi_executable.h  vsi_executor.cc  vsi_executor.h  vsi_platform.cc  vsi_transfer_manager.cc  vsi_transfer_manager.h  vsi_utils.h  xla_vsi_npu_device.cc
tensorflow/compiler/plugin/vsi/driver/passes/: InsertTranspose.cc  InsertTranspose.h
tensorflow/compiler/plugin/vsi/driver/visitors/: visitor_base.cc  (+1 more)
tensorflow/compiler/tf2xla/: xla_op_registry.cc  xla_op_registry.h
tensorflow/compiler/tf2xla/kernels/: arg_op.cc  conv_ops.cc  retval_op.cc  variable_ops.cc
tensorflow/compiler/xla/service/: hlo_computation.h  hlo_instruction.cc  local_service.cc  platform_util.cc
tensorflow/compiler/xla/service/interpreter/: BUILD  compiler.cc
tensorflow/compiler/xla/tests/: BUILD
tensorflow/core/common_runtime/: executor.cc  function_utils.cc
tensorflow/core/framework/: device.cc  op_kernel.cc  types.cc  types.h
tensorflow/core/kernels/: function_ops.cc
tensorflow/lite/delegates/nnapi/: nnapi_delegate.cc
tensorflow/lite/delegates/vx-delegate/: BUILD.bazel  CMakeLists.txt
tensorflow/python/distribute/: mirrored_strategy.py
tensorflow/python/eager/: context.py
tensorflow/python/training/: test.py
(+438 files in other folders)
