package(default_visibility = ["//visibility:public"])

cc_library(
    name = "vx_delegate",
    copts = ["-Wno-c++11-narrowing"],
    srcs = [
        "delegate_main.cc",
        "op_map.cc",
        "utils.cc",
    ],
    hdrs = [
        "delegate_main.h",
        "op_map.h",
        "utils.h",
    ],
    deps = [
        "@org_tensorflow//tensorflow/lite:framework",
        "@org_tensorflow//tensorflow/lite/kernels/internal:reference_base",
        "@org_tensorflow//tensorflow/lite/tools:logging",
        "@tim_vx//prebuilt-sdk:VIV_SDK_LIB",
        "@tim_vx//:tim-vx_interface",
    ],
    linkstatic=True,
)